jswt-parser/src/snapshots/jswt_parser__test__parse_if_statement.snap
---
source: jswt-parser/src/lib.rs
expression: actual

---
Ast {
    program: Program {
        source_elements: SourceElements {
            source_elements: [
                Statement(
                    If(
                        IfStatement {
                            span: Span {
                                file: "test.1",
                                start: 0,
                                end: 43,
                            },
                            condition: Equality(
                                BinaryExpression {
                                    ty: Unknown,
                                    span: Span {
                                        file: "test.1",
                                        start: 3,
                                        end: 9,
                                    },
                                    left: Identifier(
                                        IdentifierExpression {
                                            span: Span {
                                                file: "test.1",
                                                start: 3,
                                                end: 4,
                                            },
                                            ident: Ident {
                                                span: Span {
                                                    file: "test.1",
                                                    start: 3,
                                                    end: 4,
                                                },
                                                value: "x",
                                            },
                                            ty: Unknown,
                                        },
                                    ),
                                    op: Equal(
                                        Span {
                                            file: "test.1",
                                            start: 5,
                                            end: 7,
                                        },
                                    ),
                                    right: Identifier(
                                        IdentifierExpression {
                                            span: Span {
                                                file: "test.1",
                                                start: 8,
                                                end: 9,
                                            },
                                            ident: Ident {
                                                span: Span {
                                                    file: "test.1",
                                                    start: 8,
                                                    end: 9,
                                                },
                                                value: "y",
                                            },
                                            ty: Unknown,
                                        },
                                    ),
                                },
                            ),
                            consequence: Block(
                                BlockStatement {
                                    span: Span {
                                        file: "test.1",
                                        start: 11,
                                        end: 24,
                                    },
                                    statements: StatementList {
                                        statements: [
                                            Return(
                                                ReturnStatement {
                                                    span: Span {
                                                        file: "test.1",
                                                        start: 13,
                                                        end: 22,
                                                    },
                                                    expression: Literal(
                                                        Integer(
                                                            IntegerLiteral {
                                                                ty: Primitive(
                                                                    I32,
                                                                ),
                                                                span: Span {
                                                                    file: "test.1",
                                                                    start: 20,
                                                                    end: 21,
                                                                },
                                                                value: 0,
                                                            },
                                                        ),
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                            alternative: Some(
                                Block(
                                    BlockStatement {
                                        span: Span {
                                            file: "test.1",
                                            start: 30,
                                            end: 43,
                                        },
                                        statements: StatementList {
                                            statements: [
                                                Return(
                                                    ReturnStatement {
                                                        span: Span {
                                                            file: "test.1",
                                                            start: 32,
                                                            end: 41,
                                                        },
                                                        expression: Literal(
                                                            Integer(
                                                                IntegerLiteral {
                                                                    ty: Primitive(
                                                                        I32,
                                                                    ),
                                                                    span: Span {
                                                                        file: "test.1",
                                                                        start: 39,
                                                                        end: 40,
                                                                    },
                                                                    value: 1,
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                ),
                                            ],
                                        },
                                    },
                                ),
                            ),
                        },
                    ),
                ),
            ],
        },
    },
}
