jswt-parser/src/snapshots/jswt_parser__test__parse_member_dot_arguments_expression.snap
---
source: jswt-parser/src/lib.rs
expression: actual

---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "parse_member_dot_arguments_expression",
                    module: "module/parse_member_dot_arguments_expression",
                    start: 0,
                    end: 33,
                    [content]: "function test() { this.set(10); }",
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "parse_member_dot_arguments_expression",
                        module: "module/parse_member_dot_arguments_expression",
                        start: 0,
                        end: 33,
                        [content]: "function test() { this.set(10); }",
                    },
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "parse_member_dot_arguments_expression",
                                    module: "module/parse_member_dot_arguments_expression",
                                    start: 0,
                                    end: 33,
                                    [content]: "function test() { this.set(10); }",
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "parse_member_dot_arguments_expression",
                                        module: "module/parse_member_dot_arguments_expression",
                                        start: 9,
                                        end: 13,
                                        [content]: "test",
                                    },
                                    value: "test",
                                },
                                params: FormalParameterList {
                                    span: Span {
                                        file: "parse_member_dot_arguments_expression",
                                        module: "module/parse_member_dot_arguments_expression",
                                        start: 13,
                                        end: 15,
                                        [content]: "()",
                                    },
                                    parameters: [],
                                },
                                returns: None,
                                body: BlockStatement {
                                    span: Span {
                                        file: "parse_member_dot_arguments_expression",
                                        module: "module/parse_member_dot_arguments_expression",
                                        start: 16,
                                        end: 33,
                                        [content]: "{ this.set(10); }",
                                    },
                                    statements: StatementList {
                                        statements: [
                                            Expression(
                                                ExpressionStatement {
                                                    span: Span {
                                                        file: "parse_member_dot_arguments_expression",
                                                        module: "module/parse_member_dot_arguments_expression",
                                                        start: 18,
                                                        end: 31,
                                                        [content]: "this.set(10);",
                                                    },
                                                    expression: MemberDot(
                                                        MemberDotExpression {
                                                            span: Span {
                                                                file: "parse_member_dot_arguments_expression",
                                                                module: "module/parse_member_dot_arguments_expression",
                                                                start: 18,
                                                                end: 30,
                                                                [content]: "this.set(10)",
                                                            },
                                                            target: This(
                                                                ThisExpression {
                                                                    span: Span {
                                                                        file: "parse_member_dot_arguments_expression",
                                                                        module: "module/parse_member_dot_arguments_expression",
                                                                        start: 18,
                                                                        end: 22,
                                                                        [content]: "this",
                                                                    },
                                                                },
                                                            ),
                                                            expression: Arguments(
                                                                ArgumentsExpression {
                                                                    span: Span {
                                                                        file: "parse_member_dot_arguments_expression",
                                                                        module: "module/parse_member_dot_arguments_expression",
                                                                        start: 23,
                                                                        end: 30,
                                                                        [content]: "set(10)",
                                                                    },
                                                                    ident: Identifier(
                                                                        IdentifierExpression {
                                                                            span: Span {
                                                                                file: "parse_member_dot_arguments_expression",
                                                                                module: "module/parse_member_dot_arguments_expression",
                                                                                start: 23,
                                                                                end: 26,
                                                                                [content]: "set",
                                                                            },
                                                                            ident: Identifier {
                                                                                span: Span {
                                                                                    file: "parse_member_dot_arguments_expression",
                                                                                    module: "module/parse_member_dot_arguments_expression",
                                                                                    start: 23,
                                                                                    end: 26,
                                                                                    [content]: "set",
                                                                                },
                                                                                value: "set",
                                                                            },
                                                                        },
                                                                    ),
                                                                    arguments: ArgumentsList {
                                                                        span: Span {
                                                                            file: "parse_member_dot_arguments_expression",
                                                                            module: "module/parse_member_dot_arguments_expression",
                                                                            start: 26,
                                                                            end: 30,
                                                                            [content]: "(10)",
                                                                        },
                                                                        arguments: [
                                                                            Literal(
                                                                                Integer(
                                                                                    IntegerLiteral {
                                                                                        span: Span {
                                                                                            file: "parse_member_dot_arguments_expression",
                                                                                            module: "module/parse_member_dot_arguments_expression",
                                                                                            start: 27,
                                                                                            end: 29,
                                                                                            [content]: "10",
                                                                                        },
                                                                                        value: 10,
                                                                                    },
                                                                                ),
                                                                            ),
                                                                        ],
                                                                    },
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
